[package]
name = "magic-import"
description = "Please do not use this."
version = "0.2.1"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/Terrain2/auto-import"

[features]
prefer_core = []
stable = []

[lib]
proc_macro = true

[dependencies]
json = "0.12.4"
rand = "0.8.5"
lazy_static = "1.4.0"